--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_screenutil: ^5.9.0
   fluttertoast: ^8.2.2
   font_awesome_icon_class: ^0.0.6
   get_it: ^7.6.4
